--- a/scss/generalStyle.scss
+++ b/scss/generalStyle.scss
@@ -1,3 +1,4 @@
+//global rules
 // VARIABLES
 $Pink: #f6615f; 
 $lightPink: #fdc8c7;
@@ -34,9 +35,13 @@ h1, h2, h3, button {
 p, h4, h5, h6{
     font-family: $Text;
 }
-h3{
-    font-size: 1rem;
-}
+p, h6  {font-size: 1.5rem;}
+h5 {font-size: 1.7rem;}
+h4 {font-size: 1.8rem;}
+h3{font-size: 2rem;}
+h3{font-size: 2rem;}
+h2 {font-size: 2.5rem;}
+h1{font-size: 3rem;}
 h5, h4{
     padding: 0 0 0 .5rem;
     margin: 1rem;
@@ -69,12 +74,14 @@ h6{
     font-style: italic;
 }
 ul{
+    font-size: 1.5rem;
     list-style: none;
     li::before {content: "\2022"; color: $Pink;
         display: inline-block; width: 1em;
         margin-left: -1em}
 }
 ol{
+    font-size: 1.5rem;
     list-style: none; counter-reset: li;
     li {counter-increment: li;}
     li::before {content: counter(li); color: $Pink;
@@ -91,7 +98,7 @@ body, html{
     top:0;
     bottom:0;
     @include center();
-    background-color: $lightGrey
+    background-color: $lightGrey;
 }
 
 //Buttons styles
@@ -100,7 +107,7 @@ body, html{
     margin: .5rem auto;
     left:0; right: 0;
     padding: .5rem;
-    width: auto;
+    width: 80%;
     border-radius: 6px;
 }
 //Captions styles
@@ -112,42 +119,6 @@ body, html{
     font-size: .7rem;
     padding: 0 0 0 1rem;
     }
-
-// Nav Header  
-#headerDiv{
-    font-family:  $Title;
-    display: flex;
-    flex-flow: row nowrap;
-    max-width: 100%;
-    max-height: 40vh;
-}
-#headerLeft{
-    width: 40%;
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr .7fr;
-    justify-items: center;
-}
-#headerRight{
-    width: 40%;
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    justify-items: center;
-}
-#headerLogo{
-    width: 20%;
-    display: flex;
-    justify-content: center;
-}
-#headerLogo img{
-    height: 100%;
-    width: auto;
-    @include center();
-    }
-#igTag{
-    display: block;
-    margin: $autoMargin;
-    right: 0;
-    transform: translate(50% , 50%);}
 
 // Splash Header and footer
 @mixin splashBackground {
@@ -161,6 +132,7 @@ body, html{
    background-image: url('../assets/splashHeader.png');
    @include splashBackground();
    height: 5rem;
+   background-position-y: -40px;
 }
 #homeLink{
     @include homeLink();
@@ -170,6 +142,9 @@ footer{
     @include splashBackground();
     @include headerPink();
     height: 4.5rem;
+    @include center();
+    bottom: 0;
+    clear: both;
     p{
     transform: translate(2rem,45px);
     font-size: .7rem;    
@@ -196,41 +171,105 @@ footer{
     position: absolute;
     transform: translate(-30px, 1px);
 }
-
-//Description Div (Homepage)
-#descriptionDiv{
-    background-color: black;
-    padding: 1rem;
+   
+    
+//general styles page and side bar widgets styles
+#backgroundSplashDiv{
+    transform: translate(-10%, -30%);
     width: 100%;
-}
-#descriptionTxt{
-    color: white;
-    text-align: center;
-    line-height: 2;
+    padding: 2rem 0;
+    background-image: url('../assets/splash.png');
+    background-size: auto 100%;
+    background-repeat: no-repeat;
+    background-position: 100%, -20px; 
+#quoteDiv{
+    top: 0;
+    bottom: 0;
+            #quoteContent{
+            margin: 0 1.5rem 0 auto ;
+            max-width: 40ch;
+            text-align: right;
+            #quoteTitle{
+                transform: translateX(-40px);
+            }
+        }
+    }
 }
 
-//Page title (for archive pages)
-#title{
-    padding: .5rem 0 0 0;
-    text-align: center;
-    font-family: $Title;
-}
-
-// Archive/Projects Grid Layout 
-main{
-    height: auto;
-    display: block;
-}
-
-.latest
-{
-    width: 100%;
-    height: auto;
-    position: relative;
-}
-.alignment1
-{
+#buttonsDisplay{
+    padding: 1rem 0 0 0;
     display: flex;
+    flex-flow: row wrap; 
+    #but1{background-color: $Pink; @include button();}
+    #but2{background-color: $Grey; @include button();}
+    #but3{background-color: black; color: white;@include button();}
+}
+#buttonsDisplayWidg{
+    display: flex;
+    flex-flow: column wrap; 
+    #but1{background-color: $Pink; @include button();}
+    #but2{background-color: $Grey; @include button();}
+    #but3{background-color: black; color: white;@include button();}
+}
+.caption{
+    @include figcaption();
+}
+
+//sidebar
+/*#sideBarGrid{
+    display: grid;
+    grid-template-areas: left, right;
+}*/
+main{
+    transform: translateY(3rem);
+
+}
+#contentLeft{    
+    //position: relative;
+        width: 70%;
+        background-color: white;
+        @include center();
+        box-shadow: 2px 2px 5px $Shadow;
+        padding: 1rem 2rem;
+        margin: 0 1rem;
+        float: left;
+       // grid-area: 'left';
+       p{max-width: 70ch;margin: 0 0 0 1rem;}
+}
+#contentRight{
+    //position: relative;
+    width: 25%;
+    float: right;
+    top: 0;
+    //grid-area: 'right';
+}
+#tabDiv{
+    //position: relative;
+    background-color: $Pink;
+    height: 10px;
+    width: 70%;
+    @include center();
+    margin-top: 2.5rem;
+    margin: 0 1rem;
+    float: left;
+}
+#tab{
+    height: 3rem;
+    position: absolute;
+    background-color: $Pink;
+    border-radius: 6px;
+    transform: translateY(-40px);
+    left: 2rem;
+    h3{
+        transform: translateY(-5px);
+        padding: 0 1rem;
+    }
+}
+
+//sidebar
+#alignment2{
+    display: flex;
+    flex-flow: column wrap;
     justify-content: space-between;
     width: 80%;
     margin: $autoMargin;
@@ -239,15 +278,14 @@ main{
 .projectPreview
 {
     position: relative;
-    width: 30%;
-    padding: 2rem;
+    width: 100%;
+    padding: 1rem;
     .roundImage
     {
-        display: inline-block;
-        width: 100%;
-        height: 115%;
+        display: relative;
+        width: 80%;
         border-radius: 50%;
-        border: 1px solid black;
+        box-shadow: 2px 2px 5px $Shadow;
     }
     .ontop
     {
@@ -265,102 +303,22 @@ main{
         text-align: center;
     }
 }
-
-#seeMore{
-  @include button();
-  background-color: $Pink;
+#banner{
+    background-color: $Grey;
+    width: 300px;
+    height: 300px;
+    padding: 25% 0 0 0;
+    text-align: center;
 }
 
-//hover animation of text fading in 
-.projectPreview:hover .ontop{
-    opacity: 1;
-}
-.projectPreview:hover img{
-    opacity: .5;
-}
-//--end of homepage styles
 
-
-//404 page styles
-#contentDiv404{
-    position: relative;
-    display: flex;
-    flex-flow: row nowrap;
-    background-image: url('../assets/splash.png');
-    background-size: auto 110%;
-    background-repeat: no-repeat;
-    background-position-x: 130%; 
+[class^="icon-btn"] /*.icon-btn*/ {
+	height: 75px;
+	width: 75px;
+	border: 0;
+	font-size: 40px;
+	border-radius: 50px;
+	margin-left: 10px;
+    background-color: $Grey;
 }
-#div404A{
-    width: 40vw;
-}
-#div404B{
-    width: 60vw;
-    margin: auto 0;
-    top: 0;
-    bottom: 0;
-    padding: 1rem;
-    max-width: 46ch;
-}
-//--end of 404 
-
-
-//PROJECT PAGE style
-#projectMainDiv{
-    width: 80%;
-    background-color: white;
-    position: relative;
-    @include center();
-    box-shadow: 2px 2px 5px $Shadow;
-    padding: 1rem 1rem;
-    h1{
-        margin: .5rem;
-    }
-    h2{
-        color: $Pink;
-    }
-    p{
-        max-width: 50ch;
-        margin: 0 1.5rem;
-    }
-    button{
-        @include button();
-        margin-top: 1rem;
-        background-color: $Pink;
-    }
-    a{
-        @include inTextLink();
-    }
-}
-
-#tabDiv{
-    background-color: $Pink;
-    height: 10px;
-    width: 80%;
-    position: relative;
-    @include center();
-    margin-top: 2.5rem;
-}
-#tab{
-    height: 3rem;
-    position: absolute;
-    right: 1rem;
-    background-color: $Pink;
-    border-radius: 6px;
-    transform: translateY(-35px);
-    h3{
-        transform: translateY(-5px);
-        padding: 0 1rem;
-    }
-}
-
-.projectHeader{
-
-    img{
-        box-shadow: 2px 2px 5px $Shadow;
-        padding: 1rem;
-    }
-}
-
-//--end of project page styles
 
