--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,9 +8,9 @@ $Grey: #a1a1a1;
 $Text:'Franklin Gothic Book', 'Arial Narrow', Arial, sans-serif;
 $Title: mel02, Helvetica, sans-serif;
 
-$deviceSmall: "screen and (min-width : 320px)";
+$deviceSmall: "screen and (min-width : 540px)";
 $deviceMedium: "screen and (min-width : 750px)";
-$deviceLarge: "screen and (min-width : 1200px)";
+$deviceLarge: "screen and (min-width : 1000px)";
 
 $autoMargin: 0 auto;
 
@@ -54,17 +54,7 @@ h6{
     text-decoration: none;
     color: $Pink;
 }
-@mixin homeLink {
-    font-family: $Title;
-    text-decoration: none;
-    color: black;
-    display: flex;
-    justify-content: flex-end;
-    padding: 1.2rem 2rem 0 0 ;
-    margin: $autoMargin;
-    width: auto;
-    border: none;
-}
+
 a, a:hover, a:active, a:visited{
     text-decoration: none;
     color: inherit;
@@ -93,7 +83,7 @@ ol{
 }
 body, html{
     width: 100vw;
-    max-width: 1200px;
+    max-width: 1000px;
     top:0;
     bottom:0;
     @include center();
@@ -109,6 +99,10 @@ body, html{
     width: auto;
     border-radius: 6px;
 }
+@mixin onHoverButton {
+    background: white;
+    border: 1px solid $Grey;    
+}
 //Captions styles
 
 @mixin figcaption {
@@ -121,6 +115,7 @@ body, html{
 
 // Nav Header  
 #headerDiv{
+    position: relative;
     font-family:  $Title;
     display: flex;
     flex-flow: row nowrap;
@@ -157,6 +152,20 @@ body, html{
     margin: $autoMargin;
     right: 0;
     transform: translate(50% , 50%);}
+@media screen and (max-width : 512px){
+    #headerDiv{flex-flow: column nowrap; max-height: 100vh;}
+    #headerLogo{float: left; position: absolute; height: 100%;}
+    #headerLeft, #headerRight {display: block; margin: $autoMargin; transform: translateX(115px);
+    text-align: right;}
+    #headerLeft {transform: translateY(140px);}
+    #headerRight {transform: translateY(-225px);}
+}
+@media screen and (max-width : 450px){
+    #headerLeft, #headerRight { margin: 0;
+        transform: translateX(80px); text-align: right;}
+        #headerLeft {transform: translateY(140px);}
+        #headerRight {transform: translateY(-225px);}
+}
 
 // Splash Header and footer
 @mixin splashBackground {
@@ -173,8 +182,30 @@ body, html{
    height: 5rem;
    overflow: visible;
 }
+@mixin homeLink {
+    font-family: $Title;
+    text-decoration: none;
+    color: black;
+    display: flex;
+    justify-content: flex-end;
+    padding: 1% 10% 0 0 ;
+    width: auto;
+    border: none;
+}
 #homeLink{
     @include homeLink();
+    h3{
+        margin: 0;
+    }
+}
+@media screen and (max-width : 850px){
+    #homeLink{
+        padding: 1% 7% 0 0 ;
+        h3{font-size: .9rem;}
+    }
+    #splashHeader{
+        background-position-y: -20px;
+    }
 }
 footer{
     background-image: url('../assets/footerBackground.png');
@@ -209,6 +240,7 @@ footer{
 
 //Description Div (Homepage)
 #descriptionDiv{
+    position: relative;
     background-color: black;
     padding: 1rem;
     width: 100%;
@@ -279,6 +311,7 @@ main{
 #seeMore{
   @include button();
   background-color: $Pink;
+  &:hover {@include onHoverButton();}
 }
 
 //hover animation of text fading in 
@@ -337,6 +370,9 @@ main{
         @include button();
         margin-top: 1rem;
         background-color: $Pink;
+    &:hover{
+        @include onHoverButton();
+    }
     }
     a{
         @include inTextLink();
