--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,48 +1,63 @@
 // VARIABLES
-$Pink: #f6615f; 
+$Pink: #f6615f;
 $lightPink: #fdc8c7;
 $lightGrey: #f5f5f5;
 $Shadow: #EEEEEE;
 $Grey: #a1a1a1;
-
-$Text:'Franklin Gothic Book', 'Arial Narrow', Arial, sans-serif;
-$Title: mel02, Helvetica, sans-serif;
-
+$Text:'Franklin Gothic Book',
+'Arial Narrow',
+Arial,
+sans-serif;
+$Title: mel02,
+Helvetica,
+sans-serif;
 $deviceSmall: "screen and (min-width : 540px)";
 $deviceMedium: "screen and (min-width : 750px)";
 $deviceLarge: "screen and (min-width : 1000px)";
-
 $autoMargin: 0 auto;
-
 //TYPOGRAPHY
 @font-face {
     font-family: mel02;
     src: url('../assets/Mel02-Regular.ttf');
 }
+
 @mixin headerPink {
     font-family: $Title;
     color: $Pink;
 }
+
 @mixin center {
     margin: $autoMargin;
     left: 0;
-    right: 0;   
+    right: 0;
 }
-h1, h2, h3, button {
-    font-family:  $Title;
+
+h1,
+h2,
+h3,
+button {
+    font-family: $Title;
 }
-p, h4, h5, h6{
+
+p,
+h4,
+h5,
+h6 {
     font-family: $Text;
 }
-h3{
+
+h3 {
     font-size: 1rem;
 }
-h5, h4{
+
+h5,
+h4 {
     padding: 0 0 0 .5rem;
     margin: 1rem;
     font-weight: 600;
 }
-h6{
+
+h6 {
     padding: 0 0 0 .5rem;
     margin: 1rem;
     font-weight: 500;
@@ -55,37 +70,55 @@ h6{
     color: $Pink;
 }
 
-a, a:hover, a:active, a:visited{
+a,
+a:hover,
+a:active,
+a:visited {
     text-decoration: none;
     color: inherit;
-
 }
-.italics{
+
+.italics {
     font-style: italic;
 }
-ul{
+
+ul {
     list-style: none;
-    li::before {content: "\2022"; color: $Pink;
-        display: inline-block; width: 1em;
-        margin-left: -1em}
+    li::before {
+        content: "\2022";
+        color: $Pink;
+        display: inline-block;
+        width: 1em;
+        margin-left: -1em
+    }
 }
-ol{
-    list-style: none; counter-reset: li;
-    li {counter-increment: li;}
-    li::before {content: counter(li); color: $Pink;
-        display: inline-block; width: 1em;
-        margin-left: -1em;}
+
+ol {
+    list-style: none;
+    counter-reset: li;
+    li {
+        counter-increment: li;
+    }
+    li::before {
+        content: counter(li);
+        color: $Pink;
+        display: inline-block;
+        width: 1em;
+        margin-left: -1em;
+    }
 }
 
 //OVERALL PAGE SIZE
-*{
+* {
     box-sizing: border-box;
 }
-body, html{
+
+body,
+html {
     width: 100vw;
     max-width: 1000px;
-    top:0;
-    bottom:0;
+    top: 0;
+    bottom: 0;
     @include center();
     background-color: $lightGrey
 }
@@ -94,77 +127,146 @@ body, html{
 @mixin button {
     display: block;
     margin: .5rem auto;
-    left:0; right: 0;
+    left: 0;
+    right: 0;
     padding: .5rem;
     width: auto;
     border-radius: 6px;
 }
+
 @mixin onHoverButton {
     background: white;
-    border: 1px solid $Grey;    
+    border: 1px solid $Grey;
 }
-//Captions styles
 
+button {
+    @include button();
+    @include onHoverButton();
+}
+
+//Captions styles
 @mixin figcaption {
     background-color: $Pink;
     color: white;
     font-family: $Text;
     font-size: .7rem;
     padding: 0 0 0 1rem;
-    }
+}
 
 // Nav Header  
-#headerDiv{
+#headerDiv {
     position: relative;
-    font-family:  $Title;
+    font-family: $Title;
     display: flex;
     flex-flow: row nowrap;
     max-width: 100%;
     max-height: 40vh;
 }
-#headerLeft{
+
+#headerLeft {
     width: 40%;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr .7fr;
     justify-items: center;
-    a::hover{
+    a::hover {
         background-image: url('assets/splash.png');
     }
 }
-#headerRight{
+
+#headerRight {
     width: 40%;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     justify-items: center;
 }
-#headerLogo{
+
+#headerLogo {
     width: 20%;
     display: flex;
     justify-content: center;
 }
-#headerLogo img{
+
+#headerLogo img {
     height: 100%;
     width: auto;
+    object-fit: scale-down;
     @include center();
-    }
-#igTag{
+}
+
+#igTag {
     display: block;
     margin: $autoMargin;
     right: 0;
-    transform: translate(50% , 50%);}
-@media screen and (max-width : 512px){
-    #headerDiv{flex-flow: column nowrap; max-height: 100vh;}
-    #headerLogo{float: left; position: absolute; height: 100%;}
-    #headerLeft, #headerRight {display: block; margin: $autoMargin; transform: translateX(115px);
-    text-align: right;}
-    #headerLeft {transform: translateY(140px);}
-    #headerRight {transform: translateY(-225px);}
+    transform: translate(50%, 50%);
+    -webkit-transform: translate(50%, 50%);
+    -moz-transform: translate(50%, 50%);
+    -ms-transform: translate(50%, 50%);
+    -o-transform: translate(50%, 50%);
 }
-@media screen and (max-width : 450px){
-    #headerLeft, #headerRight { margin: 0;
-        transform: translateX(80px); text-align: right;}
-        #headerLeft {transform: translateY(140px);}
-        #headerRight {transform: translateY(-225px);}
+
+@media screen and (max-width: 512px) {
+    #headerDiv {
+        flex-flow: column nowrap;
+        max-height: 100vh;
+    }
+    #headerLogo {
+        float: left;
+        position: absolute;
+        height: 100%;
+    }
+    #headerLeft,
+    #headerRight {
+        display: block;
+        margin: $autoMargin;
+        transform: translateX(115px);
+        text-align: right;
+        -webkit-transform: translateX(115px);
+        -moz-transform: translateX(115px);
+        -ms-transform: translateX(115px);
+        -o-transform: translateX(115px);
+    }
+    #headerLeft {
+        transform: translateY(140px);
+        -webkit-transform: translateY(140px);
+        -moz-transform: translateY(140px);
+        -ms-transform: translateY(140px);
+        -o-transform: translateY(140px);
+    }
+    #headerRight {
+        transform: translateY(-225px);
+        -webkit-transform: translateY(-225px);
+        -moz-transform: translateY(-225px);
+        -ms-transform: translateY(-225px);
+        -o-transform: translateY(-225px);
+    }
+}
+
+@media screen and (max-width: 450px) {
+    #headerLeft,
+    #headerRight {
+        display: block;
+        margin: $autoMargin;
+        transform: translateX(80px);
+        text-align: right;
+        -webkit-transform: translateX(80px);
+        -moz-transform: translateX(80px);
+        -ms-transform: translateX(80px);
+        -o-transform: translateX(80px);
+    }
+    #headerLeft {
+        transform: translateY(140px);
+        -webkit-transform: translateY(140px);
+        -moz-transform: translateY(140px);
+        -ms-transform: translateY(140px);
+        -o-transform: translateY(140px);
+    }
+    #headerRight {
+        transform: translateY(-225px);
+        -webkit-transform: translateY(-225px);
+        -moz-transform: translateY(-225px);
+        -ms-transform: translateY(-225px);
+        -o-transform: translateY(-225px);
+    }
 }
 
 // Splash Header and footer
@@ -175,56 +277,74 @@ body, html{
     width: 100%;
     top: 0;
     margin: 0;
- }
-#splashHeader{
-   background-image: url('../assets/splashHeader.png');
-   @include splashBackground();
-   height: 5rem;
-   overflow: visible;
 }
+
+#splashHeader {
+    background-image: url('../assets/splashHeader.png');
+    @include splashBackground();
+    height: 5rem;
+    overflow: visible;
+}
+
 @mixin homeLink {
     font-family: $Title;
     text-decoration: none;
     color: black;
     display: flex;
     justify-content: flex-end;
-    padding: 1% 10% 0 0 ;
+    padding: 1% 10% 0 0;
     width: auto;
     border: none;
 }
-#homeLink{
+
+#homeLink {
     @include homeLink();
-    h3{
+    pointer-events: all;
+    h3 {
         margin: 0;
     }
 }
-@media screen and (max-width : 850px){
-    #homeLink{
-        padding: 1% 7% 0 0 ;
-        h3{font-size: .9rem;}
+
+@media screen and (max-width: 850px) {
+    #homeLink {
+        padding: 1% 7% 0 0;
+        h3 {
+            font-size: .9rem;
+        }
     }
-    #splashHeader{
+    #splashHeader {
         background-position-y: -20px;
     }
 }
-footer{
+
+footer {
     background-image: url('../assets/footerBackground.png');
     @include splashBackground();
     @include headerPink();
     height: 4.5rem;
-    p{
-    transform: translate(2rem,25px);  
+    p {
+        transform: translate(2rem, 25px);
+        -webkit-transform: translate(2rem, 25px);
+        -moz-transform: translate(2rem, 25px);
+        -ms-transform: translate(2rem, 25px);
+        -o-transform: translate(2rem, 25px);
     }
 }
 
 //Search Bar
-#searchBarDiv{
+#searchBarDiv {
+    pointer-events: none;
     display: flex;
     justify-content: space-around;
     padding: .5rem;
     transform: translateY(-25px);
+    -webkit-transform: translateY(-25px);
+    -moz-transform: translateY(-25px);
+    -ms-transform: translateY(-25px);
+    -o-transform: translateY(-25px);
 }
-#search{
+
+#search {
     flex: 1 1 auto;
     margin: 0;
     padding: .2rem .5rem;
@@ -233,153 +353,213 @@ footer{
     height: 100%;
     border-radius: 26px;
 }
-#searchIcon{
+
+#searchIcon {
     position: absolute;
     transform: translate(-30px, 1px);
+    -webkit-transform: translate(-30px, 1px);
+    -moz-transform: translate(-30px, 1px);
+    -ms-transform: translate(-30px, 1px);
+    -o-transform: translate(-30px, 1px);
 }
 
 //Description Div (Homepage)
-#descriptionDiv{
+#descriptionDiv {
     position: relative;
     background-color: black;
     padding: 1rem;
     width: 100%;
 }
-#descriptionTxt{
+
+#descriptionTxt {
     color: white;
     text-align: center;
     line-height: 2;
 }
 
 //Page title (for archive pages)
-#title{
+#title {
     padding: .5rem 0 0 0;
     text-align: center;
     font-family: $Title;
 }
 
 // Archive/Projects Grid Layout 
-main{
+main {
     height: auto;
     display: block;
 }
 
-.latest
-{
+.latest {
     width: 100%;
     height: auto;
     position: relative;
 }
-.alignment1
-{
+
+.alignment1 {
     display: flex;
     justify-content: space-between;
     width: 80%;
     margin: $autoMargin;
 }
 
-.projectPreview
-{
+.projectPreview {
     position: relative;
     width: 30%;
     padding: 2rem;
-    .roundImage
-    {
+    .roundImage {
         display: inline-block;
         width: 100%;
         height: 100%;
         border-radius: 50%;
         box-shadow: 5px 5px 10px $Shadow;
     }
-    .ontop
-    {
+    .onTop {
         position: absolute;
         bottom: 50%;
         @include center();
         z-index: 2;
         opacity: 0;
         transition: .5s ease;
+        -webkit-transition: .5s ease;
+        -moz-transition: .5s ease;
+        -ms-transition: .5s ease;
+        -o-transition: .5s ease;
     }
-    h3
-    {
+    h3 {
         height: 1rem;
         margin: $autoMargin;
         text-align: center;
     }
 }
 
-#seeMore{
-  @include button();
-  background-color: $Pink;
-  &:hover {@include onHoverButton();}
+#seeMore {
+    @include button();
+    background-color: $Pink;
+    &:hover {
+        @include onHoverButton();
+    }
 }
 
 //hover animation of text fading in 
-.projectPreview:hover .ontop{
+.projectPreview:hover .onTop {
     opacity: 1;
 }
-.projectPreview:hover img{
+
+.projectPreview:hover img {
     opacity: .5;
 }
+
 //--end of homepage styles
-
-
-//404 page styles
-#contentDiv404{
+//404 Contact and About page styles
+@mixin contentDivStyles {
     position: relative;
     display: flex;
     flex-flow: row nowrap;
     background-image: url('../assets/splash.png');
-    background-size: auto 110%;
+    background-size: auto 80%;
     background-repeat: no-repeat;
-    background-position-x: 130%; 
+    background-position: (100%, 50%);
 }
-#div404A{
-    width: 40vw;
+
+@mixin contentDivLeftSide {
+    width: 30vw;
 }
-#div404B{
-    width: 60vw;
+
+@mixin contentDivRightSide {
+    width: 70vw;
     margin: auto 0;
     top: 0;
     bottom: 0;
     padding: 1rem;
+}
+
+#contentDiv404 {
+    @include contentDivStyles();
+}
+
+#div404A {
+    @include contentDivLeftSide();
+}
+
+#div404B {
+    @include contentDivRightSide();
     max-width: 46ch;
 }
-//--end of 404 
 
+//contact
+#contentDivContact {
+    @include contentDivStyles();
+}
 
+#divContactA {
+    @include contentDivLeftSide();
+    display: flex;
+    img {
+        @include center();
+    }
+}
+
+#divContactB {
+    @include contentDivRightSide();
+}
+
+#contactFlex {
+    display: flex;
+    justify-content: space-around;
+}
+
+//about
+#contentDivAbout {
+    @include contentDivStyles();
+}
+
+#divAboutA {
+    @include contentDivLeftSide();
+    display: flex;
+    img {
+        @include center();
+    }
+}
+
+#divAboutB {
+    @include contentDivRightSide();
+    max-width: 60ch;
+}
+
+//--end of 404/contact/about
 //PROJECT PAGE style
-#projectMainDiv{
+#projectMainDiv {
     width: 80%;
     background-color: white;
     position: relative;
     @include center();
     box-shadow: 2px 2px 5px $Shadow;
     padding: 1rem 1rem;
-    h1{
+    h1 {
         margin: .5rem;
     }
-    h2{
+    h2 {
         color: $Pink;
     }
-    p{
+    p {
         max-width: 50ch;
         margin: 0 1.5rem;
     }
-    button{
+    button {
         @include button();
         margin-top: 1rem;
         background-color: $Pink;
-    &:hover{
-        @include onHoverButton();
+        &:hover {
+            @include onHoverButton();
+        }
     }
-    }
-    a{
+    a {
         @include inTextLink();
     }
 }
 
-#tabDiv{
+#tabDiv {
     background-color: $Pink;
     height: 10px;
     width: 80%;
@@ -387,26 +567,33 @@ main{
     @include center();
     margin-top: 2.5rem;
 }
-#tab{
+
+#tab {
     height: 3rem;
     position: absolute;
     right: 1rem;
     background-color: $Pink;
     border-radius: 6px;
     transform: translateY(-35px);
-    h3{
-        transform: translateY(-5px);
+    -webkit-transform: translateY(-35px);
+    -moz-transform: translateY(-35px);
+    -ms-transform: translateY(-35px);
+    -o-transform: translateY(-35px);
+    h3 {
         padding: 0 1rem;
+        transform: translateY(-5px);
+        -webkit-transform: translateY(-5px);
+        -moz-transform: translateY(-5px);
+        -ms-transform: translateY(-5px);
+        -o-transform: translateY(-5px);
     }
 }
 
-.projectHeader{
-
-    img{
+.projectHeader {
+    img {
         box-shadow: 2px 2px 5px $Shadow;
         padding: 1rem;
     }
 }
 
 //--end of project page styles
-
